# dependency-graph-builder

./: .gitignore  README.md  check_code.sh  dependencies.xml  main.py  pyproject.toml  requirements.txt  start_app.py
depgraph/: core.py  file_utils.py  logging_setup.py  main.py  progress_bars.py  test_code_strings.py  test_strings.py  utils.py
depgraph/analyzer/: python_analyzer.py
depgraph/analyzing/: python_analyzer.py
depgraph/back/: api.py  core.py  logger_setup.py  main.py  utils.py
depgraph/back/analyzer/: python_analyzer.py
depgraph/back/graph/: __init__.py  _base.py
depgraph/dep_finding/: python_dep_finder.py
depgraph/front/: main.py
depgraph/graph/: __init__.py  _base.py
depgraph/graph_building/: graph_creator.py
