[tool.poetry]
name = "depgraph"
version = "0.1.0"
description = "Universal dependency graph builder for popular languages (MVP: Python + JS)"
authors = ["крутой челик <почта>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "depgraph" }
]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
