[tool.poetry]
name = "depgraph"
version = "0.1.0"
description = "Universal dependency graph builder for popular languages (MVP: Python + JS)"
authors = ["крутой челик <почта>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "depgraph" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
tqdm = "^4.67.1"
networkx = "^3.5"
pyvis = "^0.3.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.9"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I"]
ignore = ["E501"]

# Список путей и папок, которые нужно игнорировать
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist"
]

[tool.mypy]
python_version = 3.12
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_equality = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

# Если хочешь, можешь игнорировать определённые файлы или папки
exclude = '(\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist)'

